Update for Apple M1

--- a/darwin/remote-builder/Dockerfile
+++ b/darwin/remote-builder/Dockerfile
@@ -1,4 +1,4 @@
-FROM nixos/nix:2.6.0
+FROM nixos/nix:2.7.0
 
 RUN nix-env -f '<nixpkgs>' -iA \
     gnused \
@@ -11,6 +11,10 @@ RUN mkdir -p /etc/ssh /var/empty \
     && cp /root/.nix-profile/etc/ssh/sshd_config /etc/ssh \
     && sed -i '/^PermitRootLogin/d' /etc/ssh/sshd_config \
     && echo "PermitRootLogin yes" >> /etc/ssh/sshd_config \
+    && sed -i '/^PermitEmptyPasswords/d' /etc/ssh/sshd_config \
+    && echo "PermitEmptyPasswords yes" >> /etc/ssh/sshd_config \
+    && sed -i '/^UsePAM/d' /etc/ssh/sshd_config \
+    && echo "UsePAM no" >> /etc/ssh/sshd_config \
     && ssh-keygen -f /etc/ssh/ssh_host_rsa_key -N "" -t rsa \
     && ssh-keygen -f /etc/ssh/ssh_host_dsa_key -N "" -t dsa \
     && echo "export NIX_PATH=$NIX_PATH" >> /etc/bashrc \
@@ -18,8 +22,7 @@ RUN mkdir -p /etc/ssh /var/empty \
     && echo "export PATH=$PATH" >> /etc/bashrc \
     && echo "source /etc/bashrc" >> /etc/profile
 
-ADD docker_rsa /root/.ssh/id_rsa
-ADD docker_rsa.pub /root/.ssh/authorized_keys
+RUN "/root/.nix-profile/bin/passwd -d root
 
 EXPOSE 22
 CMD ["/root/.nix-profile/bin/sshd", "-D", "-e"]
